# Simple-Graphrag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api_utils/: __init__.py  api.py  config.py  default_config.py  index_api.py  process_data.py  query_api.py  query_client.py  rag-client-init.py  rag_client_init.py
app_utils/: Hello.py  app_test.py
app_utils/pages/: 1_Settings.py  2_Indexing.py  3_Chat_demo.py
brief_file_utils/: data_processor.py  file_processor.py
csv-utils/: rag-client-init.py  rag-client-test.py
examples_notebooks/: global_search.ipynb  local_search.ipynb
examples_notebooks/community_contrib/neo4j/: graphrag_import_neo4j_cypher.ipynb
examples_notebooks/community_contrib/yfiles-jupyter-graphs/: graph-visualization.ipynb
graphrag-files/cache/claim_extraction/: chat-0155cfac5b3e11d5c63f33d4be8fbd31  chat-105dcf1d0aef22a71cf7796dfa908958  chat-12446a65127d425b45be7fc3ff35120c  chat-1aac98cacb80d8c866bd29400b50093c  chat-2c6bcdeef65b42131b02eb794ae490cc  chat-2f8dd7516c88b81c1b56b785d5666b5b  chat-34e4b17734ef71b11a35178281c38066  chat-645a33136e72a05030fdcb8a0d9f3357  chat-82dfbda4f29756e2d4a9e6f1b39d6164  chat-9e8e09e4bd4065a1406806108bed48c3  chat-ad41480b528a3c468a35cad0f96b7b19  chat-b77e77a74cf9c0e197da40f8387ec516  chat-be1669a1690a770e55cbed86828f0484  chat-d12acf80f2e91887b17fadec9bdf3fd6  chat-d19eed3964a941c59ea9a2e0a839a070  chat-d20f3b5c16170b308fa45fc5abc7ace2  chat-d6638595601b18514f7715dc260d1b67  chat-f2da84a8dfefddc3b7f2e07bfc78996b  chat-fd8f2f00447d8e5c0b4b3d6a911f4543  extract-continuation-0-chat-v2-0967cdcf6d2376c828915af0e48b9b4d  extract-continuation-0-chat-v2-0ae95b85fffec81d12b1efe14d968850  extract-continuation-0-chat-v2-14cdf538efa47a09475a88a4af1e61e1  extract-continuation-0-chat-v2-1ca94941d3a17865d609dcdcede92418  extract-continuation-0-chat-v2-1ea4cc3318ea421df4876a1a842d29c3  extract-continuation-0-chat-v2-3955ae014399721e48e179b25fe412dc  extract-continuation-0-chat-v2-599bc41b934d98976f7f0c8a82f24637  extract-continuation-0-chat-v2-5b380c7947c4fc6d4734b6e1a7838e4f  extract-continuation-0-chat-v2-66b95849069fee9302d5ded49bcbbc10  extract-continuation-0-chat-v2-7752d9032ce11d6556855b41443b9741  extract-continuation-0-chat-v2-8551e9ef58e4486222cf8a2cf48f1531  extract-continuation-0-chat-v2-88f0dcc9cbe2f52159ff838f3e1bee77  extract-continuation-0-chat-v2-94bbbe8fe8207d8c527f96c2cdee930b  extract-continuation-0-chat-v2-95af3cecd4f14b83f28fe63e55477b5c  extract-continuation-0-chat-v2-c29c49de0bcd2515a2a003ff2f9b2be8  extract-continuation-0-chat-v2-d6d9e04db0c878444fdaef03900b70d7  extract-continuation-0-chat-v2-e6f188379dc89eb55044b00b5c5708ed  extract-continuation-0-chat-v2-fc022232dbbb7b8f057c8b4f5a3e9d66  extract-continuation-0-chat-v2-fc4a194f42e6864f121925aedb38b5ff
graphrag-files/cache/community_reporting/: create_community_report-chat-v2-3c8965c3b5b72a886b55b96f4801c246  create_community_report-chat-v2-41c59a74b01ae2899c7538a7e44472ca  create_community_report-chat-v2-420b28f73ce340f89d7f01eafe36b325  create_community_report-chat-v2-649edfe90d18e513d177c6ae996d832a  create_community_report-chat-v2-6907e583919f8341ad27deeee9358240  create_community_report-chat-v2-842a2a521e73bee48a8e25fdaf2d1de3  create_community_report-chat-v2-8861b81b12f2397caeee5e4085f5970a  create_community_report-chat-v2-8f98cfafe8de6ba1a18df8c0c5295f9e  create_community_report-chat-v2-97619160fbd2b4a15cc79ee6c5075a0d  create_community_report-chat-v2-a2acdad11d53cd451d361d2ac715a86a  create_community_report-chat-v2-aebede9e349e5e5cffd975fe66d63190  create_community_report-chat-v2-afacecd4d9aba1d99945fe74b91c4c37  create_community_report-chat-v2-bbad1947070b6a6d8d5acfc7e9fc1ecd  create_community_report-chat-v2-c3a76a019b69aed1815cc1f1d9f08cbf  create_community_report-chat-v2-c90951f460cc19b6f5a59b1674e48876  create_community_report-chat-v2-c960b11d05a4aace05d6f200324c1611  create_community_report-chat-v2-d9b32c8932c5f25c368951fc24ec9c82  create_community_report-chat-v2-dc229140a7fd6dee16d97c39a3851e1e  create_community_report-chat-v2-dda33335c664fb8c83e001de37ba65a6
graphrag-files/cache/entity_extraction/: chat-003343f26f3c2e62a9474ec293d7ec02  chat-0b6a7ebadb9337588812f7eedd2b77e6  chat-115932e50a571445bbe03930f2540ea4  chat-1b5d0c4b9502d5ce0f870fc42ad16e5b  chat-31d54654188a7f75f561d5d03596dc74  chat-39bd58214955a611f6938d5564670a06  chat-49cb2b4b869b6fd52dbe5826ce9fde3e  chat-5acfe86e4bb7770898ff1809ded737ab  chat-6dea8959903f8598d7246ee318863332  chat-6e2577b316989076460073fa10416bff  chat-7253b1c5dba3c7d06e495acfd7b79268  chat-7a456121a75184bb507a7e472ea14fd9  chat-8076c272815b9dc756d0dcb037ffcf64  chat-976d561600832dc66d2aaeaa273e91c7  chat-99475365484fff938c22f31dc5e6a743  chat-b75993c4490cf32572308e9662e80a91  chat-d30757e6cefb5d318b6c36338774f3c3  chat-f19d64dcdb7b9a6650d2f0787fabb229  chat-fdeaa19284ef6d8095e289497f61780d  extract-continuation-0-chat-v2-0a18aa47c85ccd672113a873eb7ccd5a  (+18 more)
parquet-utils/: visualize-test.py
toml_back_up/: pyproject.toml
(+112 files in other folders)
