[tool.poetry]
name = "graph-rag-dev"
version = "0.1.0"
description = "read doc using graph-rag"
authors = ["thethepai <u202112003@hust.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
graphrag = "^0.3.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
ipykernel = "^6.29.5"
yfiles-jupyter-graphs = "^1.8.1"
neo4j = "^5.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
