[tool.poetry]
name = "graph-rag-dev"
version = "0.1.0"
description = "read doc using graph-rag"
authors = ["thethepai <u202112003@hust.edu.cn>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
graphrag = "^0.3.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
ipykernel = "^6.29.5"
yfiles-jupyter-graphs = "^1.8.1"
neo4j = "^5.24.0"
poethepoet = "^0.28.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
index = "python -m graphrag.index"
query = "python -m graphrag.query"
prompt_tune = "python -m graphrag.prompt_tune"
index_init = "python -m graphrag.index --init --root ./ragtest"