[tool.poetry]
name = "graphrag"
# Maintainers: do not change the version here manually, use ./scripts/release.sh
version = "0.3.4"
description = ""
authors = [
    "Alonso Guevara Fernández <alonsog@microsoft.com>",
    "Andrés Morales Esquivel <andresmor@microsoft.com>",
    "Chris Trevino <chtrevin@microsoft.com>",
    "David Tittsworth <datittsw@microsoft.com>",
    "Dayenne de Souza <ddesouza@microsoft.com>",
    "Derek Worthen <deworthe@microsoft.com>",
    "Gaudy Blanco Meneses <gaudyb@microsoft.com>",
    "Ha Trinh <trinhha@microsoft.com>",
    "Jonathan Larson <jolarso@microsoft.com>",
    "Josh Bradley <joshbradley@microsoft.com>",
    "Kate Lytvynets <kalytv@microsoft.com>",
    "Kenny Zhang <zhangken@microsoft.com>",
    "Mónica Carvajal",
    "Nathan Evans <naevans@microsoft.com>",
    "Rodrigo Racanicci <rracanicci@microsoft.com>",
    "Sarah Smith <smithsarah@microsoft.com>",
]
readme = "README.md"
packages = [{ include = "graphrag" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
environs = "^11.0.0"
datashaper = "^0.0.49"

# Vector Stores
azure-search-documents = "^11.4.0"
lancedb = "^0.12.0"

# Event Loops
uvloop = { version = "^0.20.0", markers = "platform_system != 'Windows'" }
nest-asyncio = { version = "^1.6.0", markers = "platform_system == 'Windows'" }

# Async IO
aiolimiter = "^1.1.0"
aiofiles = "^24.1.0"

# LLM
openai = "^1.37.1"
nltk = "3.9.1"
tiktoken = "^0.7.0"

# Data-Sci
numba = "0.60.0"
numpy = "^1.25.2"
graspologic = "^3.4.1"
networkx = "^3"
fastparquet = "^2024.2.0"
# 1.13.0 was a footgun
scipy = "1.12.0"

# Configuration
pyyaml = "^6.0.2"
pyaml-env = "^1.2.1"
python-dotenv = "^1.0.0"

# Network
tenacity = "^8.5.0"

swifter = "^1.4.0"
pydantic = "^2"
rich = "^13.6.0"
textual = "^0.78.0"
devtools = "^0.12.2"

typing-extensions = "^4.12.2"

#Azure
azure-storage-blob = "^12.22.0"
azure-identity = "^1.17.1"
json-repair = "^0.28.4"

# future
future = "^1.0.0"

#Personal
openpyxl = "^3.1.5"
neo4j = "^5.24.0"
streamlit = "^1.38.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.0"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
nbconvert = "^7.16.3"
poethepoet = "^0.27.0"
pyright = "^1.1.371"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-timeout = "^2.3.1"
ruff = "^0.6.2"
semversioner = "^2.0.3"
update-toml = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poe.tasks]
index = "python -m graphrag.index"
query = "python -m graphrag.query"
prompt_tune = "python -m graphrag.prompt_tune"
# index_init = "python -m graphrag.index --init --root ./ragtest"
# prompt_tune_init = "python -m graphrag.prompt_tune --root /path/to/project --config /path/to/settings.yaml --no-entity-types"